<resources>

    <string-array name="status_array">
        <item>All</item>
        <item>Pending</item>
        <item>In Process</item>
        <item>Resolved</item>
    </string-array>

    <string-array name="calender_type">
        <item>Date</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string name="app_name">Alertify</string>
    <string name="search">Search...</string>
    <string name="complaints">Complaints</string>
    <string name="records">Records</string>
    <string name="emergency">Emergency</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="police_station">Police Station :</string>
    <string name="password">Password</string>
    <string name="change_password">change password</string>
    <string name="alertify">ALERTIFY</string>
    <string name="crimes">Crimes</string>
    <string name="laws">Laws</string>
    <string name="criminals">Criminals</string>
    <string name="criminal_cnic">Criminal CNIC without dashes</string>
    <string name="criminal_name">Criminal name</string>
    <string name="add_criminal">Add Criminal</string>
    <string name="crime_type">Crime Type</string>
    <string name="crime">Crime</string>
    <string name="cnic">CNIC</string>
    <string name="fir">FIR</string>
    <string name="district">District :</string>
    <string name="enter_district_e_g_faisalabad">enter district e.g Faisalabad</string>
    <string name="enter_police_station_name">enter police station name</string>
    <string name="enter_number_of_fir">enter number of FIR</string>
    <string name="add_fir_details">Add FIR Details</string>
    <string name="no_of_fir">No of FIR :</string>
    <string name="evidence">Evidence</string>
    <string name="download">Download</string>
    <string name="crime_details">Crime Details</string>
    <string name="crime_location">Crime Location</string>
    <string name="crime_datetime">Crime DateTime</string>
    <string name="complaint_police_station">Complaint Police Station</string>
    <string name="complaint_datetime">Complaint DateTime</string>
    <string name="investigation_status">Investigation Status</string>
    <string name="select_investigation_status">Select investigation status</string>
    <string name="directions">Directions</string>
    <string name="user_name">User Name</string>
    <string name="user_phone_no">User Phone No</string>
    <string name="user_cnic">User CNIC</string>
    <string name="request_datetime">Request DateTime</string>
    <string name="request_police_station">Request Police Station</string>
    <string name="user_email">User Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_analytics">See Analytics</string>
    <string name="date">Date</string>
    <string name="calender_type">Calender Type</string>
    <string name="select_complaint_status">Select Complaint Status</string>
    <string name="analytics">Analytics</string>
    <string name="feedback">Feedback</string>
    <string name="law">Law</string>
    <string name="enter_section_number_here">enter section number here</string>
    <string name="add_law_details">Add Law Details</string>
    <string name="enter_law_here">enter law here</string>
    <string name="section">Section:</string>
    <string name="definition">Definition</string>
</resources>