<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".activities.EmergencyRequestDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingBottom="20dp"
        tools:ignore="ScrollViewSize">


        <TextView
            android:id="@+id/directionsHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/directions"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <Button
            android:id="@+id/directionsBtn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/directionsHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/app_color"
            android:text="@string/directions"
            android:textAllCaps="false"
            app:icon="@drawable/direction" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/directions_underline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/directionsBtn"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/userNameHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/directions_underline"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNameHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/hint_color"
            android:textSize="15sp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/userNameUnderline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/userEmailHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNameUnderline"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_email"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userEmailHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/hint_color"
            android:textSize="15sp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/userEmailUnderline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userEmail"
            android:layout_marginTop="20dp" />


        <TextView
            android:id="@+id/phoneHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userEmailUnderline"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_phone_no"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/userPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/hint_color"
            android:textSize="15sp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/userPhoneUnderline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userPhoneNo"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/cnicHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userPhoneUnderline"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_cnic"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/userCnicNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cnicHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/hint_color"
            android:textSize="15sp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/cnicUnderline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userCnicNo"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/dateTimeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cnicUnderline"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/request_datetime"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/requestDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateTimeHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/hint_color"
            android:textSize="15sp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/request_date_time_underline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/requestDateTime"
            android:layout_marginTop="20dp" />


        <TextView
            android:id="@+id/police_station_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/request_date_time_underline"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/request_police_station"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/requestPoliceStation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/police_station_heading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/hint_color"
            android:textSize="15sp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/complaint_police_station_underline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/requestPoliceStation"
            android:layout_marginTop="20dp" />

    </RelativeLayout>

</ScrollView>