<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shape">

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/close" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/criminalCnicLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/close_btn"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/criminal_cnic"
        android:textColorHint="@color/hint_color"
        app:boxStrokeColor="@color/hint_color"
        app:hintTextColor="@color/hint_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/criminalCnic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hint_color"
            android:textCursorDrawable="@drawable/cursor_shape"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/criminalNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/criminalCnicLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/criminal_name"
        android:textColorHint="@color/hint_color"
        app:boxStrokeColor="@color/hint_color"
        app:hintTextColor="@color/hint_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/criminalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hint_color"
            android:textCursorDrawable="@drawable/cursor_shape"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/dialogProgressbar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/criminalNameLayout"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="@color/app_color"
        android:visibility="invisible" />

    <Button
        android:id="@+id/addCriminalBtn"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@id/dialogProgressbar"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/app_color"
        android:text="@string/add_criminal"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="10dp" />

</RelativeLayout>